# presents

./: Untitled.ipynb  get_gadgets.ipynb  play.py  pyproject.toml  search_results_2024-09-15_896.json  search_results_2024-09-15_901.json  sel.py  yt_channels_latest_videos.csv
shop_presents/: README.md  pyproject.toml  report.md
shop_presents/src/shop_presents/: crew.py  main.py
shop_presents/src/shop_presents/config/: agents.yaml  tasks.yaml
shop_presents/src/shop_presents/tools/: custom_tool.py  play.py
